Trying out github pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <div class="scanline"></div>
             </div>
           </div>
-          <p id="scanBoxP">Scan characters to see AR feature!</p>
+          <p id="scanBoxP">Scan characters to see AR feature! Hello</p>
         </div>
         
         <div id="iconsDiv">
