--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a-entity id="example-target" mindar-image-target="targetIndex: 0">   
         <!-- <a-gltf-model src="#Megaman" rotation="0 0 0 " position="0 -0.5 0" scale="3.5 3.5 3.5" animation-mixer></a-gltf-model> -->
         <!-- <a-gltf-model src="#george_bread" rotation="0 0 0 " position="-0.25 0 4" scale="0.015 0.015 0.015" animation-mixer></a-gltf-model> -->
-        <a-gltf-model id="model" rotation="0 0 0 " position="0 -0.5 0" scale="3.5 3.5 3.5" animation-mixer></a-gltf-model>
+        <a-gltf-model id="model" rotation="0 0 0 " position="0 0 0" scale="1 1 1" animation-mixer></a-gltf-model>
 
       </a-entity>
 
@@ -70,48 +70,27 @@
           const randomModel = randomChoice(models)
           const modelEl = document.querySelector("#model");
           modelEl.setAttribute("src", randomModel);
+
+          modelEl.addEventListener("model-loaded", function () {
+          const model = modelEl.getObject3D('mesh');
+          if (!model) return;
+
+          // Compute the bounding box of the model
+          const box = new THREE.Box3().setFromObject(model);
+          const center = box.getCenter(new THREE.Vector3());
+          const size = box.getSize(new THREE.Vector3());
+
+          // Center the model
+          model.position.sub(center);
+
+          // Optional: Scale the model to fit a standard size
+          const scaleFactor = 1 / Math.max(size.x, size.y, size.z);
+          model.scale.set(scaleFactor, scaleFactor, scaleFactor);
+
+          // Update the model matrix
+          model.updateMatrixWorld(true);
+          });
         });
-
-        // let arSystem;
-        // sceneEl.addEventListener("loaded", function () {
-        //   arSystem = sceneEl.systems["mindar-image-system"];
-        // });
-        // 1;
-
-      //   const exampleTarget = document.querySelector("#example-target");
-
-      //   const startButton = document.querySelector("#example-start-button");
-      //   const stopButton = document.querySelector("#example-stop-button");
-      //   const pauseButton = document.querySelector("#example-pause-button");
-      //   const pauseKeepVideoButton = document.querySelector("#example-pause-keep-video-button");
-      //   const unpauseButton = document.querySelector("#example-unpause-button");
-
-      //   // arReady event triggered when ready
-      //   sceneEl.addEventListener("arReady", (event) => {
-      //     // console.log("MindAR is ready")
-      //   });
-      //   // arError event triggered when something went wrong. Mostly browser compatbility issue
-      //   sceneEl.addEventListener("arError", (event) => {
-      //     // console.log("MindAR failed to start")
-      //   });
-      //   // detect target found
-      //   exampleTarget.addEventListener("targetFound", (event) => {
-      //     console.log("target found");
-      //     document.getElementById("vid").play();
-      //   });
-      //   // detect target lost
-      //   exampleTarget.addEventListener("targetLost", (event) => {
-      //     console.log("target lost");
-      //     document.getElementById("vid").pause();
-      //   });
-
-      // screen.orientation.addEventListener("change", () => {
-      //   // window.location.reload();
-      //   arSystem.stop();
-      //   arSystem.start();
-      // });
-
-
       });
     </script>
   </body>
