--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           console.log("Loading random model...");
           const models = ["#Megaman", "#george_bread"];
           const randomModel = randomChoice(models)
-          console.log(randomChoice);
+          console.log("Selected Model: ", randomModel);
           const modelEl = document.querySelector("#model");
           modelEl.setAttribute("src", randomModel);
 
