--- a/index.html
+++ b/index.html
@@ -75,15 +75,11 @@
           modelEl.setAttribute("src", randomModel);
         }
 
-        sceneEl.addEventListener("loaded", function() {
+        sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
           console.log("Scene loaded event listener triggered!");
-          loadRandomModel();
+          // loadRandomModel();
         });
-
-        sceneEl.addEventListener("fullscreenchange", function() {
-          console.log("Scene fullscreenchange event listener triggered!");
-          loadRandomModel();
-        })
+        loadRandomModel();
       });
     </script>
   </body>
