--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           console.log("Scene loaded event listener triggered!");
           // loadRandomModel();
         });
-        loadRandomModel();
+        // loadRandomModel();
       });
     </script>
   </body>
