--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
           console.log("Scene loaded event listener triggered!");
-          // loadRandomModel();
+          loadRandomModel();
         });
         // loadRandomModel();
       });
