--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           const modelEl = document.querySelector("#model");
           modelEl.setAttribute("src", randomModel);
         }
-        loadRandomModel();
+        // loadRandomModel();
         sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
           console.log("Scene loaded event listener triggered!");
           loadRandomModel();
