--- a/index.html
+++ b/index.html
@@ -74,12 +74,23 @@
           const modelEl = document.querySelector("#model");
           modelEl.setAttribute("src", randomModel);
         }
-        // loadRandomModel();
-        sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
-          console.log("Scene loaded event listener triggered!");
+        
+        // sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
+        //   console.log("Scene loaded event listener triggered!");
+        //   loadRandomModel();
+        // });
+        
+        // Listen for MindAR target detected event
+        document.addEventListener('mindar-target-detected', function (event) {
+          console.log('Target detected:', event.detail.name);
+          // Load random model when target detected
           loadRandomModel();
         });
-        // loadRandomModel();
+
+        sceneEl.addEventListener("loaded", function() {
+          console.log("Scene loaded event listener triggered!");
+        });
+
       });
     </script>
   </body>
