--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           console.log("Selected Model: ", randomModel);
           const modelEl = document.querySelector("#model");
           modelEl.setAttribute("src", randomModel);
-          // reenterSceneE1();
+          reenterSceneE1();
         }
 
-        reenterSceneE1();
+        // reenterSceneE1();
         function reenterSceneE1() {
           sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
           console.log("Re-entering sceneE1 code");
@@ -84,10 +84,10 @@
           });
         }
         
-        sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
-          console.log("Scene loaded event listener triggered!");
-          loadRandomModel();
-        });
+        // sceneEl.addEventListener("loaded", function() { //in a-frame, the "loaded" event is triggered when the A-frame scene has finished loading, the scene is ready for interaction and rendering
+        //   console.log("Scene loaded event listener triggered!");
+        //   loadRandomModel();
+        // });
         
       });
     </script>
