--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
           loadRandomModel();
         });
 
+        console.log("Event listeners registered");
+
         sceneEl.addEventListener("loaded", function() {
           console.log("Scene loaded event listener triggered!");
         });
