--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         //   const randomModel = randomChoice(models)
         //   console.log("Selected Model: ", randomModel);
         //   const modelEl = document.querySelector("#model");
-        //   modelEl.setAttribute('data-src', randomModel);
         //   modelEl.setAttribute("src", randomModel);
           
         // }
@@ -81,43 +80,16 @@
         //   console.log("Scene loaded event listener triggered!");
         //   loadRandomModel();
         // });
+
+        sceneEl.addEventListener('mindar-image-target-found', function (event) {
+          console.log("Loading random model...");
+          const models = ["#Megaman", "#george_bread"];
+          const randomModel = randomChoice(models);
+          console.log("Selected Model: ", randomModel);
+          const modelEl = document.querySelector("#model");
+          modelEl.setAttribute("src", randomModel);
+        });
         
-        sceneEl.addEventListener('loaded', function () {
-            console.log("Scene loaded!");
-
-            sceneEl.addEventListener('mindar-image-target-found', function (event) {
-              loadRandomModel();
-            });
-          });
-
-          function loadRandomModel() {
-            console.log("Loading random model...");
-            const models = ["#Megaman", "#george_bread"];
-            const randomModel = randomChoice(models);
-            console.log("Selected Model: ", randomModel);
-
-            const sceneEl = document.querySelector("a-scene");
-            const modelEl = document.querySelector("#model");
-
-            // Remove existing model
-            if (modelEl) {
-              console.log("Removing existing model...");
-              sceneEl.removeChild(modelEl);
-            }
-
-            // Create new model with updated source
-            const newModelEl = document.createElement('a-gltf-model');
-            newModelEl.setAttribute('id', 'model');
-            newModelEl.setAttribute('rotation', '0 0 0');
-            newModelEl.setAttribute('position', '0 -0.5 0');
-            newModelEl.setAttribute('scale', '3.5 3.5 3.5');
-            newModelEl.setAttribute('animation-mixer', '');
-            newModelEl.setAttribute('src', randomModel);
-
-            // Add new model to the scene
-            console.log("Adding new model...", randomModel);
-            sceneEl.appendChild(newModelEl);
-          }
       });
     </script>
   </body>
