--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           loadRandomModel();
         });
 
-        document.addEventListener('mindar-target-detected', function (event) {
-          console.log('Target detected:', event.detail.name);
+        document.addEventListener("mindar-target-detected", function () {
+          console.log("Target detected");
           // Load a random model when target detected
           loadRandomModel();
         });
