--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         //   loadRandomModel();
         // });
         sceneEl.addEventListener("loaded", function () {
-          const models = ["#spiderman", "#skeleton"];
+          const models = ["#Megaman", "#george_bread"];
           const modelEl = document.querySelector("#model");
 
           // Set the model initially
