--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         const modelEl = document.querySelector("#model");
         const exampleTarget = document.querySelector("#example-target");
         const modelInfoEl = document.getElementById("model-info");
-        let randomModel = randomChoice(models)
+        let randomModel;
         
 
         function randomChoice(arr){
@@ -81,6 +81,7 @@
           console.log("Loading random model...");
           const models = ["#Megaman", "#george_bread"];
           // let randomModel = randomChoice(models)
+          randomModel = randomChoice(models);
           console.log("Selected Model: ", randomModel);
           modelEl.setAttribute("src", randomModel);
 
