--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
           document.addEventListener("DOMContentLoaded", function () {
           // const modelEl = document.querySelector("#model");
           const exampleTarget = document.querySelector("#example-target");
-          const models = ["#Megaman", "#george_bread"];
+          const models = ["Megaman", "george_bread"];
 
           exampleTarget.addEventListener("targetFound", event => {
             console.log("Target detected. Loading random model...");
             const randomModel = models[Math.floor(Math.random() * models.length)];
             console.log("Selected Model: ", randomModel);
-              
+
             const modelEl = document.querySelector("#model");
             modelEl.setAttribute("gltf-model", randomModel);
           });
