--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           // const modelEl = document.querySelector("#model");
           const exampleTarget = document.querySelector("#example-target");
           const models = ["Megaman", "george_bread"];
+          const modelInfoEl = document.getElementById("model-info");
 
           exampleTarget.addEventListener("targetFound", event => {
             console.log("Target detected. Loading random model...");
