--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             const modelEl = document.querySelector("#model");
             // modelEl.setAttribute("gltf-model", randomModel);
             modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
+            modelEl.setAttribute("src", `./static/3D-file/glb/${randomModel}.glb`);
 
             if (`./static/3D-file/glb/${randomModel}.glb` === "#Megaman") {
               modelInfoEl.textContent = "Megaman rendered";
