--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
             const modelEl = document.querySelector("#model");
             // modelEl.setAttribute("gltf-model", randomModel);
-            modelEl.setAttribute("gltf-model", `./static/3D-file/glb/${randomModel}.glb`);
-            modelEl.setAttribute("src", `./static/3D-file/glb/${randomModel}.glb`);
+            modelEl.setAttribute("gltf-model", randomModel);
+            modelEl.setAttribute("src", randomModel);
 
-            if (`./static/3D-file/glb/${randomModel}.glb` === "#Megaman") {
+            if (randomModel === "#Megaman") {
               modelInfoEl.textContent = "Megaman rendered";
-            } else if (`./static/3D-file/glb/${randomModel}.glb` === "#george_bread") {
+            } else if (randomModel === "#george_bread") {
               modelInfoEl.textContent = "George_bread rendered";
             }
 
